--- a/CapyGamesA/src/app/shared/navigation/navigation.component.html
+++ b/CapyGamesA/src/app/shared/navigation/navigation.component.html
@@ -16,7 +16,8 @@
         />
       </mat-toolbar>
       <mat-nav-list>
-        <a mat-list-item routerLink="games">Games</a>
+        <a mat-list-item routerLink="games"><mat-icon>sports_esports</mat-icon>   Games</a>
+        <a mat-list-item routerLink="cart"><mat-icon>shopping_cart</mat-icon>   Cart</a>
       </mat-nav-list>
     </mat-sidenav>
     <mat-sidenav-content class="row">
