--- a/CapyGamesA/src/app/modules/Customer/game/pages/main-game/main-game.component.html
+++ b/CapyGamesA/src/app/modules/Customer/game/pages/main-game/main-game.component.html
@@ -1,17 +1,10 @@
 <mat-card class="mt-5 mb-5">
   <mat-card-header class="row">
     <div class="col-12">
-      <mat-card-title class="text-center">Game</mat-card-title>
+      <mat-card-title class="text-center">Games</mat-card-title>
     </div>
   </mat-card-header>
   <mat-card-content>
-    <table
-      class="col-12"
-      mat-table
-      [dataSource]="game"
-      matSort
-      (matSortChange)="announceSortChange($event)"
-    >
       <ng-container matColumnDef="id">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>Id</th>
         <td mat-cell *matCellDef="let element">{{ element.id }}</td>
@@ -42,11 +35,17 @@
           >
             Add to cart
           </button>
+          <button
+            mat-raised-button
+            color="primary"
+            (click)="viewGame(element)"
+          >
+            View Game
+          </button>
         </td>
       </ng-container>
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
       <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
-    </table>
     <mat-paginator
       [pageSizeOptions]="[5, 10, 25]"
       showFirstLastButtons
