--- a/CapyGamesA/src/app/shared/navigation/navigation.component.html
+++ b/CapyGamesA/src/app/shared/navigation/navigation.component.html
@@ -1,4 +1,4 @@
-<div>
+<div *ngIf="session.logged">
   <mat-sidenav-container class="sidenav-container">
     <mat-sidenav
       #drawer
@@ -52,4 +52,7 @@
       </div>
     </mat-sidenav-content>
   </mat-sidenav-container>
+</div>
+<div *ngIf="!session.logged">
+  <app-signin></app-signin>
 </div>
