--- a/CapyGamesA/src/app/modules/Customer/auth/pages/signin/signin.component.html
+++ b/CapyGamesA/src/app/modules/Customer/auth/pages/signin/signin.component.html
@@ -1,8 +1,8 @@
-<div class="container-fluid">
+<div class="container-fluid" style="margin-top: 380px;">
   <div class="row">
     <div class="col-12 text-center">
       <mat-card
-        class="position-absolute top-50 start-50 translate-middle justify-content-center"
+        class="position-absolute top-100 start-50 translate-middle justify-content-center"
         style="width: 35%"
       >
         <mat-card-header class="row mt-1">
