--- a/CapyGamesA/src/app/modules/Customer/game/pages/main-game/main-game.component.html
+++ b/CapyGamesA/src/app/modules/Customer/game/pages/main-game/main-game.component.html
@@ -1,56 +1,44 @@
 <mat-card class="mt-5 mb-5">
   <mat-card-header class="row">
     <div class="col-12">
-      <mat-card-title class="text-center">Games</mat-card-title>
+      <mat-card-title class="text-center" id="titleGame">Games</mat-card-title>
     </div>
   </mat-card-header>
   <mat-card-content>
-      <ng-container matColumnDef="id">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>Id</th>
-        <td mat-cell *matCellDef="let element">{{ element.id }}</td>
-      </ng-container>
-      <ng-container matColumnDef="name">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>Name</th>
-        <td mat-cell *matCellDef="let element">{{ element.name }}</td>
-      </ng-container>
-      <ng-container matColumnDef="description">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>Description</th>
-        <td mat-cell *matCellDef="let element">{{ element.description }}</td>
-      </ng-container>
-      <ng-container matColumnDef="price">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>Price</th>
-        <td mat-cell *matCellDef="let element">{{ element.price }}</td>
-      </ng-container>
-      <ng-container matColumnDef="image">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>Image</th>
-        <td mat-cell *matCellDef="let element">{{ element.image }}</td>
-      </ng-container>
-      <ng-container matColumnDef="actions">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>Actions</th>
-        <td mat-cell *matCellDef="let element">
-          <button
+    <!--
+      <mat-card
+    class="col-12"
+    *ngFor="let game of games"
+    >
+      <mat-card-header class="row">
+        <div class="col">
+          <mat-card-title>{{game.name}}</mat-card-title>
+          <mat-card-subtitle>{{game.genre}}</mat-card-subtitle>
+        </div>
+      </mat-card-header>
+      <img mat-card-image src="{{game.image}}" alt="Photo of a Shiba Inu">
+      <mat-card-content>
+        <p>
+          {{game.description}}
+        </p>
+      </mat-card-content>
+      <mat-card-actions>
+        <button
             mat-raised-button
             color="primary"
-            (click)="addToCart(element)"
+            (click)="addToCart()"
           >
             Add to cart
           </button>
           <button
             mat-raised-button
             color="primary"
-            (click)="viewGame(element)"
+            (click)="viewGame()"
           >
             View Game
           </button>
-        </td>
-      </ng-container>
-      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-      <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
-    <mat-paginator
-      [pageSizeOptions]="[5, 10, 25]"
-      showFirstLastButtons
-      arial-label="Page navigation"
-    >
-    </mat-paginator>
+      </mat-card-actions>
+    </mat-card>
+    -->
   </mat-card-content>
 </mat-card>
