--- a/CapyGamesA/src/app/shared/navigation/navigation.component.html
+++ b/CapyGamesA/src/app/shared/navigation/navigation.component.html
@@ -12,12 +12,13 @@
         <img
           [src]="logoPath"
           alt="CapyGames"
-          style="width: 35%; height: auto; display: inline; margin-top: 10px;"
+          style="width: 40%; height: auto; display: inline; margin-top: 10px;"
         />
       </mat-toolbar>
       <mat-nav-list>
         <a mat-list-item routerLink="games"><mat-icon>sports_esports</mat-icon>   Games</a>
         <a mat-list-item routerLink="cart"><mat-icon>shopping_cart</mat-icon>   Cart</a>
+        <a mat-list-item routerLink="orders"><mat-icon>receipt</mat-icon>   Orders</a>
       </mat-nav-list>
     </mat-sidenav>
     <mat-sidenav-content class="row">
@@ -31,14 +32,17 @@
         >
           <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
         </button>
+        <div class="col" id="tit">CapyGames<mat-icon style="margin-top: 5px;">sports_esports</mat-icon></div>
         <div class="col text-end">
-          <button mat-button [matMenuTriggerFor]="menu">
+          <button mat-icon-button [matMenuTriggerFor]="menu">
             <mat-icon>more_vert</mat-icon>
           </button>
           <mat-menu #menu="matMenu">
-            <button mat-menu-item><mat-icon>person</mat-icon>Perfil</button>
             <button mat-menu-item>
-              <mat-icon>logout</mat-icon>Cerrar Sesion
+              <mat-icon>person</mat-icon>Profile
+            </button>
+            <button mat-menu-item>
+              <mat-icon>logout</mat-icon>Logout
             </button>
           </mat-menu>
         </div>
