--- a/CapyGamesA/src/app/modules/Customer/order/pages/main-order/main-order.component.html
+++ b/CapyGamesA/src/app/modules/Customer/order/pages/main-order/main-order.component.html
@@ -28,7 +28,7 @@
                     </th>
                     </thead>
                     <tbody>
-                    <tr *ngFor="let order of orders">
+                    <!-- <tr *ngFor="let order of order">
                         <td>
                         {{order.orderId}}
                         </td>
@@ -44,7 +44,7 @@
                         <td>
                         <button class="btn btn-primary" (click)="viewOrder(order.orderId)">View</button>
                         </td>
-                    </tr>
+                    </tr> -->
                     </tbody>
                 </table>
                 </div>
