--- a/CapyGamesA/src/app/modules/Customer/game/pages/main-game/main-game.component.html
+++ b/CapyGamesA/src/app/modules/Customer/game/pages/main-game/main-game.component.html
@@ -5,6 +5,58 @@
     </div>
   </mat-card-header>
   <mat-card-content>
+    <mat-card>
+      <mat-card-header class="row">
+        <div class="col">
+          <mat-card-title>DBD</mat-card-title>
+          <mat-card-subtitle>Survivor</mat-card-subtitle>
+        </div>
+      </mat-card-header>
+      <img
+        mat-card-image
+        src="https://phantom-marca.unidadeditorial.es/da2d5baf1ea1fa9a02f13f39b86fe52f/resize/1320/f/jpg/assets/multimedia/imagenes/2021/12/03/16385608274679.jpg"
+        alt="Photo of a Shiba Inu"
+      />
+      <mat-card-content>
+        <p>Hola</p>
+      </mat-card-content>
+      <mat-card-actions>
+        <div>
+          <button mat-raised-button color="primary">
+            <mat-icon>shopping_cart</mat-icon>Add to cart
+          </button>
+          <button mat-raised-button color="primary" style="margin-left: 10px;">
+            <mat-icon>visibility</mat-icon>View
+          </button>
+        </div>
+      </mat-card-actions>
+    </mat-card>
+    <mat-card>
+      <mat-card-header class="row">
+        <div class="col">
+          <mat-card-title>DBD</mat-card-title>
+          <mat-card-subtitle>Survivor</mat-card-subtitle>
+        </div>
+      </mat-card-header>
+      <img
+        mat-card-image
+        src="https://phantom-marca.unidadeditorial.es/da2d5baf1ea1fa9a02f13f39b86fe52f/resize/1320/f/jpg/assets/multimedia/imagenes/2021/12/03/16385608274679.jpg"
+        alt="Photo of a Shiba Inu"
+      />
+      <mat-card-content>
+        <p>Hola</p>
+      </mat-card-content>
+      <mat-card-actions>
+        <div>
+          <button mat-raised-button color="primary">
+            <mat-icon>shopping_cart</mat-icon>Add to cart
+          </button>
+          <button mat-raised-button color="primary" style="margin-left: 10px;">
+            <mat-icon>visibility</mat-icon>View
+          </button>
+        </div>
+      </mat-card-actions>
+    </mat-card>
     <!--
       <mat-card
     class="col-12"
