--- a/CapyGamesA/src/app/shared/navigation/navigation.component.html
+++ b/CapyGamesA/src/app/shared/navigation/navigation.component.html
@@ -17,7 +17,7 @@
       </mat-toolbar>
       <mat-nav-list>
         <a mat-list-item [routerLink]="['games']"><mat-icon>sports_esports</mat-icon>   Games</a>
-        <a mat-list-item [routerLink]="['cart']"><mat-icon>shopping_cart</mat-icon>   Cart</a>
+        <a mat-list-item [routerLink]="['getGame']"><mat-icon>shopping_cart</mat-icon>   Cart</a>
         <a mat-list-item [routerLink]="['orders']"><mat-icon>receipt</mat-icon>   Orders</a>
       </mat-nav-list>
     </mat-sidenav>
@@ -32,7 +32,7 @@
         >
           <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
         </button>
-        <div class="col" id="tit">CapyGames<mat-icon style="margin-top: 5px;">sports_esports</mat-icon></div>
+        <div class="col" id="tit">Capybara Games<mat-icon style="margin-top: 5px;">sports_esports</mat-icon></div>
         <div class="col text-end">
           <button mat-icon-button [matMenuTriggerFor]="menu">
             <mat-icon>more_vert</mat-icon>
