--- a/CapyGamesA/src/app/shared/navigation/navigation.component.html
+++ b/CapyGamesA/src/app/shared/navigation/navigation.component.html
@@ -16,9 +16,9 @@
         />
       </mat-toolbar>
       <mat-nav-list>
-        <a mat-list-item routerLink="games"><mat-icon>sports_esports</mat-icon>   Games</a>
-        <a mat-list-item routerLink="cart"><mat-icon>shopping_cart</mat-icon>   Cart</a>
-        <a mat-list-item routerLink="orders"><mat-icon>receipt</mat-icon>   Orders</a>
+        <a mat-list-item [routerLink]="['game']"><mat-icon>sports_esports</mat-icon>   Games</a>
+        <a mat-list-item [routerLink]="['cart']" ><mat-icon>shopping_cart</mat-icon>   Cart</a>
+        <a mat-list-item routerLink="orders" ><mat-icon>receipt</mat-icon>   Orders</a>
       </mat-nav-list>
     </mat-sidenav>
     <mat-sidenav-content class="row">
@@ -60,3 +60,4 @@
 <div *ngIf="!session.logged">
   <app-signin></app-signin>
 </div>
+
