--- a/CapyGamesA/src/app/modules/Customer/cart/pages/main-cart/main-cart.component.html
+++ b/CapyGamesA/src/app/modules/Customer/cart/pages/main-cart/main-cart.component.html
@@ -58,7 +58,7 @@
 
                     <tr>
                       <td class="text-right" colspan="3">
-                        <h5 class="mb-0">holaxd: </h5>
+                        <h5 class="mb-0">Subtotal: </h5>
                       </td>
                       <!-- <td class="text-right">
                         <h5 class="mb-0">{{cart.Subtotal_price}}</h5>
