--- a/CapyGamesA/src/app/shared/navigation/navigation.component.html
+++ b/CapyGamesA/src/app/shared/navigation/navigation.component.html
@@ -17,7 +17,7 @@
       </mat-toolbar>
       <mat-nav-list>
         <a mat-list-item [routerLink]="['games']"><mat-icon>sports_esports</mat-icon>   Games</a>
-        <a mat-list-item [routerLink]="['getGame']"><mat-icon>shopping_cart</mat-icon>   Cart</a>
+        <a mat-list-item [routerLink]="['cart']"><mat-icon>shopping_cart</mat-icon>   Cart</a>
         <a mat-list-item [routerLink]="['orders']"><mat-icon>receipt</mat-icon>   Orders</a>
       </mat-nav-list>
     </mat-sidenav>
@@ -41,7 +41,7 @@
             <button mat-menu-item>
               <mat-icon>person</mat-icon>Profile
             </button>
-            <button mat-menu-item>
+            <button mat-menu-item (click)="logout()">
               <mat-icon>logout</mat-icon>Logout
             </button>
           </mat-menu>
