carrito antes de fusionar

--- a/CapyGamesA/src/app/modules/Customer/cart/pages/main-cart/main-cart.component.html
+++ b/CapyGamesA/src/app/modules/Customer/cart/pages/main-cart/main-cart.component.html
@@ -48,7 +48,7 @@
                       <td class="text-right">
                         <h5 class="mb-0">{{cart.total_price}}</h5>
                       </td>
-                      <td>
+                      <td class="text-right">
                         <button mat-flat-button color="warn" (click)="deleteCart()">Eliminar</button>
                       </td>
 
