--- a/CapyGamesA/src/app/modules/Customer/review/pages/main-review/main-review.component.html
+++ b/CapyGamesA/src/app/modules/Customer/review/pages/main-review/main-review.component.html
@@ -1,1 +1,114 @@
-<h1>Hola mundo</h1>
+<mat-card class="mt-5 mb-5">
+  <mat-card-header class="row">
+
+    <div class="col-2">
+      <mat-card-title>Imagen aqui
+        Imagen aqui
+        Imagen aqui
+        Imagen aqui
+        Imagen aqui
+        Imagen aqui
+        Imagen aqui
+        Imagen aqui
+        Imagen aqui
+      </mat-card-title>
+    </div>
+    <div class="col-10">
+      <p>
+        Learn one way to build applications with Angular and reuse your code and
+        abilities to build apps for any deployment target. For web, mobile web,
+        native mobile and native desktop.
+      </p>
+
+      <h3>Speed &amp; Performance</h3>
+      <p>
+        Achieve the maximum speed possible on the Web Platform today, and take it
+        further, via Web Workers and server-side rendering. Angular puts you in
+        control over scalability. Meet huge data requirements by building data
+        models on RxJS, Immutable.js or another push-model.
+      </p>
+
+      <h3>Incredible tooling</h3>
+      <p>
+        Build features quickly with simple, declarative templates. Extend the
+        template language with your own components and use a wide array of existing
+        components. Get immediate Angular-specific help and feedback with nearly
+        every IDE and editor. All this comes together so you can focus on building
+        amazing apps rather than trying to make the code work.
+      </p>
+
+      <h3>Loved by millions</h3>
+      <p>
+        From prototype through global deployment, Angular delivers the productivity
+        and scalable infrastructure that supports Google's largest applications.
+      </p>
+
+      <h3>What is Angular?</h3>
+
+      <p>
+        Angular is a platform that makes it easy to build applications with the web.
+        Angular combines declarative templates, dependency injection, end to end
+        tooling, and integrated best practices to solve development challenges.
+        Angular empowers developers to build applications that live on the web,
+        mobile, or the desktop
+      </p>
+      <p>
+        Learn one way to build applications with Angular and reuse your code and
+        abilities to build apps for any deployment target. For web, mobile web,
+        native mobile and native desktop.
+      </p>
+
+      <h3>Speed &amp; Performance</h3>
+      <p>
+        Achieve the maximum speed possible on the Web Platform today, and take it
+        further, via Web Workers and server-side rendering. Angular puts you in
+        control over scalability. Meet huge data requirements by building data
+        models on RxJS, Immutable.js or another push-model.
+      </p>
+
+      <h3>Incredible tooling</h3>
+      <p>
+        Build features quickly with simple, declarative templates. Extend the
+        template language with your own components and use a wide array of existing
+        components. Get immediate Angular-specific help and feedback with nearly
+        every IDE and editor. All this comes together so you can focus on building
+        amazing apps rather than trying to make the code work.
+      </p>
+
+      <h3>Loved by millions</h3>
+      <p>
+        From prototype through global deployment, Angular delivers the productivity
+        and scalable infrastructure that supports Google's largest applications.
+      </p>
+
+      <h3>What is Angular?</h3>
+
+      <p>
+        Angular is a platform that makes it easy to build applications with the web.
+        Angular combines declarative templates, dependency injection, end to end
+        tooling, and integrated best practices to solve development challenges.
+        Angular empowers developers to build applications that live on the web,
+        mobile, or the desktop
+      </p>
+    </div>
+
+<br><br>
+    <mat-card class="mt-5 mb-5">
+    <div class="col">
+      <mat-card-title>Agregue su comentario</mat-card-title>
+      <br>
+    </div>
+    <div class="col text-end">
+      <button
+        mat-mini-fab
+        color="accent"
+        aria-label="Open register review"
+        (click)="openDialog('0ms', '0ms')"
+      >
+        <mat-icon>add</mat-icon>
+      </button>
+    </div>
+    </mat-card>
+  </mat-card-header>
+
+</mat-card>
