--- a/CapyGamesA/src/app/shared/navigation/navigation.component.html
+++ b/CapyGamesA/src/app/shared/navigation/navigation.component.html
@@ -18,7 +18,7 @@
       <mat-nav-list>
         <a mat-list-item [routerLink]="['game']"><mat-icon>sports_esports</mat-icon>   Games</a>
         <a mat-list-item [routerLink]="['cart']" ><mat-icon>shopping_cart</mat-icon>   Cart</a>
-        <a mat-list-item routerLink="orders" ><mat-icon>receipt</mat-icon>   Orders</a>
+        <a mat-list-item [routerLink]="['order']" ><mat-icon>receipt</mat-icon>   Orders</a>
       </mat-nav-list>
     </mat-sidenav>
     <mat-sidenav-content class="row">
