--- a/CapyGamesA/src/app/modules/Customer/auth/pages/signin/signin.component.html
+++ b/CapyGamesA/src/app/modules/Customer/auth/pages/signin/signin.component.html
@@ -3,7 +3,7 @@
     <div class="col-12 text-center">
       <mat-card
         class="position-absolute top-50 start-50 translate-middle justify-content-center"
-        style="width: 35%"
+        style="width: 35%; border: 0.5px solid black; border-radius: 10px"
       >
         <mat-card-header class="row mt-1">
           <div class="col text-center">
@@ -13,8 +13,10 @@
               mat-card-image
               style="width: 40%; height: auto; display: inline"
             />
-            <mat-card-title style="font-size: 30px;">CapyGames</mat-card-title>
-            <mat-card-subtitle style="font-size: 20px; margin-top: 10px;">Sign In</mat-card-subtitle>
+            <mat-card-title style="font-size: 30px">CapyGames</mat-card-title>
+            <mat-card-subtitle style="font-size: 20px; margin-top: 10px"
+              >Sign In</mat-card-subtitle
+            >
           </div>
         </mat-card-header>
         <form #loginForm="ngForm" novalidate (submit)="signin()">
@@ -72,6 +74,15 @@
               >
                 Log in
               </button>
+              <a
+                style="margin-left: 0.1px; margin-top: 20px"
+                mat-flat-button
+                class="w-50"
+                color="primary"
+                [routerLink]="['signup']"
+              >
+                Register
+              </a>
             </div>
           </mat-card-actions>
           <mat-card-footer *ngIf="isLoading">
