--- a/CapyGamesA/src/app/modules/Customer/game/pages/main-game/main-game.component.html
+++ b/CapyGamesA/src/app/modules/Customer/game/pages/main-game/main-game.component.html
@@ -1,39 +1,57 @@
-<mat-card class="mt-5 mb-5" style="padding-left: 10px;">
+<mat-card class="mt-5 mb-5" style="padding-left: 10px">
   <mat-card-header class="row">
     <div class="col-12">
-      <mat-card-title class="text-center" id="titleGame">Games<mat-icon>sports_esports</mat-icon></mat-card-title>
+      <mat-card-title class="text-center" id="titleGame"
+        >Games<mat-icon>sports_esports</mat-icon></mat-card-title
+      >
     </div>
   </mat-card-header>
   <mat-card-content>
     <div class="row">
-    <mat-card id="cartGame" style="width: 23%; margin-top: 20px; margin-left: 20px; background-color: rgb(240, 236, 240);" *ngFor="let game of games">
-      <mat-card-header class="row">
-        <div>
-          <mat-card-title>{{ game.game_name }}</mat-card-title>
-          <mat-card-subtitle>{{ game.game_genre }}</mat-card-subtitle>
-        </div>
-      </mat-card-header>
-      <img
-        mat-card-image
-        src="../../../../../../assets/img/{{ game.game_image }}"
-        alt="La imagen no se pudo cargar"
-        style="width: 386px; margin-left: -7.8px; height: 220px;"
-      />
-      <mat-card-content style="text-align: center;">
-        <p style="font-size: 17px; margin-top: 15px;">${{ game.game_price }}</p>
-      </mat-card-content>
-      <mat-card-actions>
-        <div style="margin-left: 62px; margin-top: 10px;">
-          <button mat-raised-button color="primary" (click)="addCart(game)">
-            <mat-icon>shopping_cart</mat-icon>Add to cart
-          </button>
-          <button mat-raised-button color="primary" style="margin-left: 10px" (click)="viewGame(game)">
-            <mat-icon>visibility</mat-icon>View
-          </button>
-        </div>
-      </mat-card-actions>
-    </mat-card>
-  </div>
+      <mat-card
+        id="cartGame"
+        style="
+          width: 23%;
+          margin-top: 20px;
+          margin-left: 20px;
+          background-color: rgb(240, 236, 240);
+        "
+        *ngFor="let game of games"
+      >
+        <mat-card-header class="row">
+          <div>
+            <mat-card-title>{{ game.game_name }}</mat-card-title>
+            <mat-card-subtitle>{{ game.game_genre }}</mat-card-subtitle>
+          </div>
+        </mat-card-header>
+        <img
+          mat-card-image
+          src="../../../../../../assets/img/{{ game.game_image }}"
+          alt="La imagen no se pudo cargar"
+          style="width: 386px; margin-left: -7.8px; height: 220px"
+        />
+        <mat-card-content style="text-align: center">
+          <p style="font-size: 17px; margin-top: 15px">
+            ${{ game.game_price }}
+          </p>
+        </mat-card-content>
+        <mat-card-actions>
+          <div style="margin-left: 62px; margin-top: 10px">
+            <button mat-raised-button color="primary" (click)="addCart(game)">
+              <mat-icon>shopping_cart</mat-icon>Add to cart
+            </button>
+            <button
+              mat-raised-button
+              color="primary"
+              style="margin-left: 10px"
+              (click)="viewGame(game)"
+            >
+              <mat-icon>visibility</mat-icon>View
+            </button>
+          </div>
+        </mat-card-actions>
+      </mat-card>
+    </div>
     <!--
       <mat-card
     class="col-12"
